// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders icon and text tabs 1`] = `
<nav
  className="mdc-tab-bar mdc-tab-bar--icons-with-text"
  indicator="accent"
>
  <a
    className="mdc-tab mdc-tab--active mdc-tab--with-icon-and-text"
  >
    <i
      className="material-icons mdc-tab__icon"
    >
      star
    </i>
    <span
      className="mdc-tab__icon-text"
    >
      Tab 1
    </span>
    <span
      className="mdc-tab__indicator"
    />
  </a>
  <a
    className="mdc-tab mdc-tab--with-icon-and-text"
  >
    <i
      className="material-icons mdc-tab__icon"
    >
      favorite
    </i>
    <span
      className="mdc-tab__icon-text"
    >
      Tab 2
    </span>
    <span
      className="mdc-tab__indicator"
    />
  </a>
  <a
    className="mdc-tab mdc-tab--with-icon-and-text"
  >
    <i
      className="material-icons mdc-tab__icon"
    >
      bookmark
    </i>
    <span
      className="mdc-tab__icon-text"
    >
      Tab 3
    </span>
    <span
      className="mdc-tab__indicator"
    />
  </a>
</nav>
`;

exports[`renders icon tabs 1`] = `
<nav
  className="mdc-tab-bar mdc-tab-bar--icon-tab-bar"
  indicator="primary"
>
  <a
    className="mdc-tab mdc-tab--active"
  >
    <i
      className="material-icons mdc-tab__icon"
    >
      star
    </i>
    <span
      className="mdc-tab__indicator"
    />
  </a>
  <a
    className="mdc-tab"
  >
    <i
      className="material-icons mdc-tab__icon"
    >
      favorite
    </i>
    <span
      className="mdc-tab__indicator"
    />
  </a>
  <a
    className="mdc-tab"
  >
    <i
      className="material-icons mdc-tab__icon"
    >
      bookmark
    </i>
    <span
      className="mdc-tab__indicator"
    />
  </a>
</nav>
`;

exports[`renders text tabs 1`] = `
<nav
  className="mdc-tab-bar custom"
>
  <a
    className="mdc-tab mdc-tab--active"
  >
    Tab 1
    <span
      className="mdc-tab__indicator"
    />
  </a>
  <a
    className="mdc-tab"
  >
    Tab 2
    <span
      className="mdc-tab__indicator"
    />
  </a>
  <a
    className="mdc-tab"
  >
    Tab 3
    <span
      className="mdc-tab__indicator"
    />
  </a>
</nav>
`;
